force-app/main/default/objects/Apttus_Config2__OrderWorkflowRule__c/Apttus_Config2__OrderWorkflowRule__c.object-meta.xml
<CustomObject>
    <description>Represents a single rule in a order workflow ruleset</description>
    <label>Order Workflow Rule</label>
    <nameField>
        <displayFormat>OR-{0000000}</displayFormat>
        <label>Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Workflow Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>