force-app/main/default/objects/Apttus_Config2__OrderWorkflowRule__c/fields/Apttus_Config2__Action__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Action__c</fullName>
    <description>The action associated with the rule</description>
    <inlineHelpText>The action associated with the rule</inlineHelpText>
    <label>Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amend Order</fullName>
            </value>
            <value>
                <fullName>Amend And Accept Order</fullName>
            </value>
            <value>
                <fullName>Cancel Order</fullName>
            </value>
            <value>
                <fullName>Cancel And Accept Order</fullName>
            </value>
            <value>
                <fullName>Split Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>