force-app/main/default/objects/Apttus_Config2__OrderWorkflowRule__c/fields/Apttus_Config2__NumberOfEntries__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__NumberOfEntries__c</fullName>
    <description>Indicates the number of entries associated with the order workflow rule</description>
    <inlineHelpText>Indicates the number of entries associated with the order workflow rule</inlineHelpText>
    <label>Number Of Entries</label>
    <summaryForeignKey>Apttus_Config2__OrderWorkflowRuleEntry__c.Apttus_Config2__RuleId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>