force-app/main/default/objects/Apttus_Config2__OrderWorkflowRule__c/fields/Apttus_Config2__RulesetId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RulesetId__c</fullName>
    <description>ID of the associated rule set</description>
    <inlineHelpText>ID of the associated rule set</inlineHelpText>
    <label>Ruleset</label>
    <referenceTo>Apttus_Config2__OrderWorkflowRuleset__c</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>